# pemrograman_web_itera_123140139

Faiq Ghozy Erlangga_123140139_pertemuan1/: flake.nix  index.html  package-lock.json  package.json
Faiq Ghozy Erlangga_123140139_pertemuan1/js/: add.js  filter.js  main.js  taskTable.js
faiqghozyerlangga_123140139_pertemuan1/: README.md  index.html  package-lock.json  package.json
faiqghozyerlangga_123140139_pertemuan1/js/: add.js  checkUndone.js  filter.js  main.js  taskTable.js
faiqghozyerlangga_123140139_pertemuan2/: README.md  flake.nix  index.html  package-lock.json  package.json
faiqghozyerlangga_123140139_pertemuan2/js/: main.js  todolist.js  weather.js
faiqghozyerlangga_123140139_pertemuan4/: README.md  flake.nix  main.py  pyproject.toml
faiqghozyerlangga_123140139_pertemuan4/data/: dictionary.py
faiqghozyerlangga_123140139_pertemuan4/logic/: add_new_data.py  biggest_smallest_point.py  filter_grade.py  show_all_data.py  summary.py
faiqghozyerlangga_123140139_pertemuan5/: .gitignore  README.md  flake.nix  main.py  pyproject.toml
faiqghozyerlangga_123140139_pertemuan5/data/: data.json
faiqghozyerlangga_123140139_pertemuan5/src/: library.py  library_item.py
faiqghozyerlangga_123140139_pertemuan6/: README.md  flake.nix  requirements.txt
faiqghozyerlangga_123140139_pertemuan6/pyramid_scaffold/: development.ini  setup.py
faiqghozyerlangga_123140139_pertemuan6/pyramid_scaffold/pyramid_scaffold/: routes.py
faiqghozyerlangga_123140139_pertemuan6/pyramid_scaffold/pyramid_scaffold/models/: __init__.py  matakuliah.py
(+3 files in other folders)
