[project]
name = "faiqghozyerlangga-123140139-pertemuan5"
version = "0.1.0"
description = ""
authors = [
    {name = "faiq1818",email = "ghozyerlanggafaiq@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "rich (>=14.2.0,<15.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
